--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -49,6 +49,10 @@ a.disabled:hover {
     overflow: hidden !important;
 }
 
+.CodeMirror-empty {
+  color: $polar_grey_2 !important;
+}
+
 app-workflow-admin .CodeMirror-scroll {
   min-height: 180px;
 }
