--- a/ui/src/app/views/workflow/run/node/pipeline/pipeline.html
+++ b/ui/src/app/views/workflow/run/node/pipeline/pipeline.html
@@ -25,7 +25,7 @@
                                     <ul>
                                         <li *ngFor="let j of stage.jobs">
                                             <div class="job ui segment pointing"
-                                                [class.active]="currentJob?.pipeline_action_id === j.pipeline_action_id"
+                                                [class.active]="currentNodeJobRun?.job?.pipeline_action_id === j.pipeline_action_id"
                                                 [class.success]="mapJobStatus?.get(j.pipeline_action_id) && mapJobStatus?.get(j.pipeline_action_id).status === pipelineStatusEnum.SUCCESS"
                                                 [class.inactive]="mapJobStatus?.get(j.pipeline_action_id) && (mapJobStatus?.get(j.pipeline_action_id).status === pipelineStatusEnum.DISABLED || mapJobStatus?.get(j.pipeline_action_id).status === pipelineStatusEnum.SKIPPED)"
                                                 [class.fail]="mapJobStatus?.get(j.pipeline_action_id) && mapJobStatus?.get(j.pipeline_action_id).status === pipelineStatusEnum.FAIL"
@@ -68,7 +68,7 @@
                 </div>
                 <div class="row">
                     <div class="column">
-                        <app-workflow-run-job [nodeJobRun]="currentNodeJobRun" (onScroll)="onJobScroll($event)"></app-workflow-run-job>
+                        <app-workflow-run-job [nodeJobRun]="currentNodeJobRun" (onScroll)="onJobScroll($event)" #runjobComponent></app-workflow-run-job>
                     </div>
                 </div>
             </div>
