feat: allow lazy binary download
if there is no binary in docker image, there will be auto downloaded
from github or artifactory if configured.

Signed-off-by: Yvonnick Esnault <yvonnick.esnault@corp.ovh.com>

--- a/ui/src/app/views/settings/download/download.html
+++ b/ui/src/app/views/settings/download/download.html
@@ -4,7 +4,7 @@
         <div *ngIf="loading" class="ui active text loader">{{ 'common_loading' | translate }}</div>
         <div class="ui bulleted list">
                 <ng-container *ngFor="let resource of resources">
-                <div class="item" *ngIf="resource.available"> 
+                <div class="item"> 
                     <strong>{{resource.name}}</strong> {{resource.os}} {{resource.arch}} <em>{{resource.variant}}</em>
                     <a href="cdsapi/download/{{resource.name}}/{{resource.os}}/{{resource.arch}}?variant={{resource.variant}}">
                         ({{resource.filename}})
