--- a/ui/src/app/views/workflowv3/workflowv3.html
+++ b/ui/src/app/views/workflowv3/workflowv3.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<div class="banner">
+    This page shows a read-only Workflow v3 preview. Please <a
+        [routerLink]="['/project', projectKey, 'workflow', workflowName]">go back to classic view</a> to modify or run a
+    Workflow.
+</div>
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
