--- a/ui/src/app/views/workflow/show/admin/workflow.admin.component.html
+++ b/ui/src/app/views/workflow/show/admin/workflow.admin.component.html
@@ -325,5 +325,5 @@
     </app-zone>
 </div>
 
-<app-workflow-delete-modal #workflowDeleteModal [project]="project" [workflow]="workflow" >
+<app-workflow-delete-modal #workflowDeleteModal>
 </app-workflow-delete-modal>
